<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_map">Map view</string>
    <string name="title_restaurants_list">List view</string>
    <string name="title_workmates">Workmates</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id">4380232385376361</string>
    <string name="fb_login_protocol_scheme">fb4380232385376361</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="success">Authentification success</string>
    <string name="canceled">Authentification canceled</string>
    <string name="error">There is an error to the authentification process</string>
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="logo_text">Find a nice restaurant and invite your co-worker to lunch !</string>
    <string name="locationNotGranted">Please grant the location permission</string>
    <string name="error_unknown_error"> A unknow error has appeared</string>
    <string name="likeTextRestaurantProfilValidate">You like</string>
    <string name="likeTextRestaurantProfilInvalidate">Like</string>
    <string name="messageRecovingRestaurants">Recoving restaurants</string>
    <string name="messageRecoveWorkmates">Recoving workmates</string>
    <string name="NavigationChooseRestaurant">Please, choose a restaurant.</string>
    <string name="changing_scope">Changing scope</string>
    <string name="progress">Progress: </string>
    <string name="start_seekBar">Started tracking seekbar</string>
    <string name="settings_dialog_title">Select the scope of restaurants recovery :</string>

</resources>