<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_your_lunch"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/your_lunch" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/log_out" />
        </group>
    </menu>
